# s3m11

./: .env.example  .gitignore  README.md  docker-compose.yml
monitoring/: docker-compose.yml
monitoring/exporter/: Dockerfile  requirements.txt  supabase_exporter.py
monitoring/grafana/dashboards/: supabase_bucket_dashboard.json
monitoring/prometheus/: prometheus.yml
ze_package/: package_use.py  pyproject.toml
ze_package/tests/: test_ingestion.py
ze_package/ze_package/: ingestion.py
